--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -1,24 +1,38 @@
 ---
-id: community-governance
-title: Community Governance
-pagination_label: Community Governance
-sidebar_label: Community Governance
+id: governance
+title: Governance
+pagination_label: Governance
+sidebar_label: Governance
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /community-governance
+slug: /governance
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<img className="docsheader" src={useBaseUrl('img/community/community.png')} />
+<img className="docsheader" src={useBaseUrl('img/community/community.png')} /># Governance
 
-The Helium Community is the home to tens of thousands of developers and network operators who
-collaborate every day across the world to build the Helium Network. All are welcome to take part.
-Join us!
+The Helium Community is the home to hundreds of developers and network operators who collaborate
+every day across the world to build the global decentralized wireless network that is the Helium
+Network.
+
+The Helium Community utilizes network-wide, token voting for Governance. The Helium Improvement
+Proposal, or "HIP", is the core unit of change.
+
+Anyone is welcome and encouraged to write a HIP. HIP Editors are Foundation Employees or Community
+Volunteers who assist authors with HIP readiness.
+
+All token holders are eligible to vote! To participate in making changes to the Helium Network,
+token holders should stake their tokens in Realms.
+
+All are welcome to shape the future of decentralized wireless. Read on for more information and join
+us!
 
 ---
 
-## Discord
+## Contribute
+
+### Discord
 
 The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium
 Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium
@@ -28,45 +42,60 @@ Network. It is also the primary venue to get support for using the Network.
 
 ---
 
-## Helium Improvement Proposals
+## Propose
+
+### Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
-"HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and
-approve/reject new changes to major elements of the network like the core protocol, token economics,
-and even network governance itself.
+"HIPs"). Modeled on BIPs from the Bitcoin community, as well as pulling from influences of
+open-source development, HIPs are used to introduce, debate, and approve/reject new changes to major
+elements of the Network like the core blockchain, HNT, IOT MOBILE token economics, and Network
+governance itself.
 
 In the earliest phases, it's best to vet an idea with the Helium community
 [via Discord](https://discord.gg/helium). This is a good way to see if there is initial support for
-the idea, or if it's been discussed before. The #hip-discussion channel is a great place to
-circulate an early idea.
+the idea, or if it's been discussed before. The
+[hip-discussion](discord://discord.com/channels/404106811252408320/730243559873052754) channel is a
+great place to circulate an early idea.
 
-HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). Specific
-HIP discussion also happens in the `Improvement Proposal` channels of
+HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP
+discussions also happen in the `Improvement Proposal` channels of
 [Helium Discord](https://discord.gg/helium). All members of the Helium Community are encouraged to
 create HIPs and participate in the governance process.
 
----
+- [HIP Repo on GitHub](https://github.com/helium/HIP)
 
-## Monthly Community Calls
-
-The Helium Foundation holds monthly [Community Calls](https://helium.foundation/community-call).
-These typically happen on the **4th Wednesday of each month at 12PM ET**. Each call has an open
-agenda, and any community member can join and add items to the agenda to be discussed.
-
-- [Community Call Notes and Agenda](https://helium.foundation/community-call)
-- [Video recordings of previous community calls](https://vimeo.com/dewialliance) some are linked in
-  the Community Call notes.
+Learn more about HIPs [here](/hip)
 
 ---
 
-## Social Media
+## Vote
 
-Helium is everywhere. Here's the full list:
+### Realms
 
-- [Twitter](https://twitter.com/helium)
-- [Instagram](https://www.instagram.com/helium/)
-- [LinkedIn](https://www.linkedin.com/company/heliuminc/)
-- [Reddit](https://www.reddit.com/r/HeliumNetwork/)
-- [Facebook](https://www.facebook.com/heliumsystems)
-- [Discord](https://discord.gg/helium)
-- [Telegram](https://t.me/helium_network) Currently Read Only
+[Realms](https://app.realms.today/) is a Solana native tool for DAO infrastructure. As part of the
+migration to the Solana Blockchain, the Helium Community adopted Realms as the tool for staking,
+delegating, and on-chain voting. This tool replaces Helium Vote.
+
+Read [this page](/vote-escrow/realms) to learn how to navigate Realms.
+
+Join the DAOs on Realms.
+
+- [Helium DAO](https://www.realms.heliumvote.com/dao/hnt)
+- [IOT DAO](https://www.realms.heliumvote.com/dao/iot)
+- [MOBILE DAO](https://www.realms.heliumvote.com/dao/mobile)
+
+---
+
+## Be In The Know
+
+### Monthly Community Calls
+
+The Helium Community holds monthly video calls (led by the
+[Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th
+Wednesday of each month at Noon ET**. Each call has an open agenda, and any community member can
+join and add items to the agenda to be discussed.
+
+- [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
+- [Video recordings of previous community calls](https://helium.foundation/community-call) are
+  linked in the Community Call notes.
