clarity and other edits

--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -10,11 +10,10 @@ slug: /governance
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<img className="docsheader" src={useBaseUrl('img/community/community.png')} /># Governance
+<img className="docsheader" src={useBaseUrl('img/community/community.png')} />
 
 The Helium Community is the home to hundreds of developers and network operators who collaborate
-every day across the world to build the global decentralized wireless network that is the Helium
-Network.
+across the world every day to build the global decentralized wireless network that is Helium.
 
 The Helium Community utilizes network-wide, token voting for Governance. The Helium Improvement
 Proposal, or "HIP", is the core unit of change.
@@ -25,10 +24,9 @@ Volunteers who assist authors with HIP readiness.
 All token holders are eligible to vote! To participate in making changes to the Helium Network,
 token holders should stake their tokens in Realms.
 
-All are welcome to shape the future of decentralized wireless. Read on for more information and join
-us!
+All are welcome to shape the future of decentralized wireless.
 
----
+Read on for more information and join us!
 
 ## Contribute
 
@@ -59,7 +57,7 @@ the idea, or if it's been discussed before. The
 great place to circulate an early idea.
 
 HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP
-discussions also happen in the `Improvement Proposal` channels of
+discussions also happen in the `Helium Improvement Proposal` channels of
 [Helium Discord](https://discord.gg/helium). All members of the Helium Community are encouraged to
 create HIPs and participate in the governance process.
 
