--- a/docs/governance/realms.mdx
+++ b/docs/governance/realms.mdx
@@ -23,33 +23,33 @@ is facilitated through the website [Realms](https://realms.today).
 ## Staking
 
 To vote in the Helium DAO, you must stake HNT. Staking HNT will give you voting power in the DAO.
-The same function applies to each subDAO, including the IOT and MOBILE subDAOs today, and new DAOs
-in the future. When you stake HNT, you'll receive veHNT in your wallet. This represents a position
-you have in the DAO and on your HNT. It is not tradable.
+The same function applies to each subDAO, including the IOT and MOBILE subDAOs today, and new
+subDAOs in the future. When you stake HNT, you'll receive veHNT in your wallet. This represents a
+position of voting power for which you hold in the DAO or subDAO. It is not tradable or
+transferrable.
+
+You can learn more about Staking on Realms [here.](/vote-escrow/realms)
 
 ---
 
-## On-Chain Fees
+## What To Expect with On-Chain Voting
 
-All veHNT holders can vote by issuing a small SOL token transaction from their wallet. Ballot
-options will typically be `For` or `Against`.
+**On-Chain Fees:** All veToken holders must have SOL in their voting wallet to submit a vote
+transaction. You can access more SOL through many different options. If you are using SOL for the
+first time, check out [this onboarding and swap tool](/helium-tokens/sol-token#swap-utility).
+
+**Ballot Options:** Proposal vote options will typically be `For` or `Against`.
 
 ---
 
 ## How to Vote on Realms
 
-The first thing you need to do is ensure that you have a Solana-ready wallet that is funded with
-some SOL and one of the network tokes: HNT, IOT, or MOBILE. Once you have that ready navigate to the
-Helium DAO, IOT subDAO, or MOBILE subDAO at https://app.realms.today/. There you should be met with
-a screen that looks similar to this one:
-
----
-
-## Voting with Realms
-
 Like many other Solana Ecosystem projects, Helium uses Realms to organize and manage governance,
-vote escrowed tokens, delegation, and more. Using the links above, you can cast your vote for the
-relevant segment of the Helium Network.
+vote escrowed tokens, delegation, and more. Using the links below, you can cast your vote for the
+subDAO of which you seek to impact and contribute to.
+
+Ensure that you have a Solana-ready wallet that is funded with some SOL and one of the network
+tokes: HNT, IOT, or MOBILE.
 
 <figure className="screensnippet-wrapper">
   <div style={{ display: 'flex' }}>
