--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -25,7 +25,7 @@ addresses will be provided.
 
 ---
 
-## Previous HIPs
+## Implemented HIPs
 
 All HIPs that have passed and been implemented in the Helium Community are listed below. Not all
 HIPs pass super-majority voting, so you will see some changes in HIP numbers as you go down this
@@ -69,6 +69,6 @@ be found at www.github.com/helium/hip
 | 70 | [Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md) | [Approved](https://github.com/helium/HIP/issues/471) |
 | 73 | [Consensus Deselection Weighting](https://github.com/helium/HIP/blob/main/0073-consensus-deselection-history-weight.md) | [Deployed (audit/txn)](https://github.com/helium/HIP/issues/491) |
 | 74 | [Mobile PoC - Modeled Coverage Rewards](https://github.com/helium/HIP/blob/main/0074-mobile-poc-modeled-coverage-rewards.md) | [Approved](https://github.com/helium/HIP/issues/504) |
-| 75 | [Initiate Programmatic PoC Emissions with an Updated Emissions Curve](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md) | [In Discussion](https://github.com/helium/HIP/issues/526) |
+| 75 | [Initiate Programmatic PoC Emissions with an Updated Emissions Curve](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md) | [Approved](https://github.com/helium/HIP/issues/526) |
 | 76 | [Simplify Lockup Curve and veTokens](https://github.com/helium/HIP/blob/main/0076-linear-lockup-curve.md) | [Approved](https://github.com/helium/HIP/issues/560) |
 | 77 | [Launch Parameters for Solana Migration](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md) | [Approved](https://github.com/helium/HIP/issues/573) |
