update hip section

--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -97,3 +97,20 @@ join and add items to the agenda to be discussed.
 - [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
 - [Video recordings of previous community calls](https://helium.foundation/community-call) are
   linked in the Community Call notes.
+
+### Discord
+
+All HIP and Governance discussions take place on the
+[Helium Discord](https://discord.com/invite/helium).
+
+### Socials + Ecosystem Voices
+
+As a network steward, the Helium Foundation posts important governance news, calls to vote, and more
+on Twitter. [Follow @HeliumFndn](https://twitter.com/HeliumFndn) on Twitter to stay up to date.
+
+As a decentralized network, there are numerous voices that discuss governance, host debates, and
+explain HIPs in layman's terms. You can find many of these influential voices in Discord, on
+Twitter, or Youtube.
+
+_If you'd like to have your name or channels listed and linked here as a governance resource, submit
+a ticket in the Helium [Docs Repo](https://github.com/helium/docs/issues)._
