--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -15,13 +15,30 @@ Helium Community.
 
 ---
 
-## How a HIP Becomes a Vote
+## How an Idea Becomes a HIP
 
-A vote can be created by opening a PR against the
-[Helium Vote repository](https://github.com/helium/helium-vote/). Templates are provided within the
-repo. Authors are encouraged to write their HIP description in a nonbiased manner and are subject to
-review. In partnership with the Helium Foundation, a block height deadline, vote ID, and voting
-addresses will be provided.
+1. **Idea Stage:** HIPs start as ideas for improving an aspect of economic, technical, or
+   meta-governance.
+2. **Drafting Stage:** Generally, when enough community members believe the idea is worth
+   formulating into a HIP, they do so and submit that HIP as a draft to the Helium
+   [HIP Repository](www.github.com/helium/hip).
+3. **Editing Stage:** HIP Editors assist HIP Authors in clarity, consistency, and completeness. HIP
+   Editors work directly with authors, but everyone is able to provide feedback before the HIP moves
+   forward. Sometimes, a HIP is never fully complete and in that case, does not move beyond the
+   draft stage.
+4. **Discussion Stage:** A HIP becomes a full-fledged proposal and is made available for the
+   community to discuss. HIPs last in the Discussion Stage for at least 2 weeks, but often more
+   depending on the type of discussion and how critical the change is. Moderators help manage HIP
+   discussions to keep them on topic.
+5. **Rough Consensus Stage:** After deliberate discussion, a HIP Editor seeks a point in time for
+   Consensus, which is typically done through a Temperature Check vote in Discord. This vote is
+   non-binding and gives HIP Editors a sense of HIP readiness.
+6. **Voting Stage:** After the community has come to a consensus on if a HIP is ready to go to a
+   network-wide vote, the HIP Editor and Helium Foundation will execute the voting contract and
+   communicate the vote out. All token holders are eligible to vote on the HIP at this time.
+7. **Implementation Stage:** After the HIP receives a vote, if it passes 2/3 majority vote, then the
+   HIP is Approved and Helium Core Developers will go to work on implementing it. If the HIP is
+   rejected, the Proposal is effectively closed.
 
 ---
 
