--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -37,7 +37,7 @@ to your GitHub account.
 
 :::
 
-1. Log in to an existing account or create a new account on [GitHub](www.github.com).
+1. Log in to an existing account or create a new account on [GitHub](https://github.com).
 2. Open the Helium HIP Repository at [https://github.com/helium/hip](https://github.com/helium/hip)
 3. Click the `Fork` button in the upper right-hand corner.
 4. Leave all settings default and confirm using the green `Create Fork` button at the bottom
