--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -21,7 +21,7 @@ Helium Community.
    meta-governance.
 2. **Drafting Stage:** Generally, when enough community members believe the idea is worth
    formulating into a HIP, they do so and submit that HIP as a draft to the Helium
-   [HIP Repository](www.github.com/helium/hip).
+   [HIP Repository](https://github.com/helium/hip).
 3. **Editing Stage:** HIP Editors assist HIP Authors in clarity, consistency, and completeness. HIP
    Editors work directly with authors, but everyone is able to provide feedback before the HIP moves
    forward. Sometimes, a HIP is never fully complete and in that case, does not move beyond the
