--- a/docs/hotspot-makers/iot/full-hotspots.mdx
+++ b/docs/hotspot-makers/iot/full-hotspots.mdx
@@ -58,4 +58,4 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 - [Hotspot WiFi Configuration](/hotspot-makers/become-a-maker/hotspot-wifi-configuration)
 - [Burning HNT to your Maker Wallet](/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet)
 - [Create a Maker App](/hotspot-makers/become-a-maker/maker-app-requirements)
-- [Radio Certification (FCC, CE) app notes] (/hotspot-makers/become-a-maker/radio-certifications)
+- [Radio Certification (FCC, CE)](/hotspot-makers/hotspot-audit-process#radio-certifications)
