--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -58,7 +58,7 @@ to your GitHub account.
 ## Edit an Existing HIP
 
 1. Begin inside the forked copy at `https://github.com/<githubUsername>/HIP`
-2. Open the HIP to edit, this example uses HIP 83, by clicking on the file.
+2. Open the HIP to be edited by clicking on the file. This example uses 'HIP 83'.
 3. Click the `Pencil Icon` in the upper right-hand corner to make edits.
 4. Make edits or changes to the HIP.
 5. Click the green `Commit changes...` button in the upper right-hand corner.
@@ -73,6 +73,7 @@ to your GitHub account.
   <figcaption>Make an edit to an existing HIP and commit changes to the Fork.</figcaption>
 </figure>
 
+<br />
 :::info HIPs are Written in Markdown
 
 All HIPs in the Helium GitHub repository are written in **Markdown** an easy-to-read, easy-to-write
@@ -93,9 +94,9 @@ A Pull Request, or "PR", is the action taken to submit changes to a GitHub repos
 
 :::
 
-1. Committed edits will display a "This branch is 1 comit ahead of helium:main" banner at the top of
+1. Committed edits will display a "This branch is 1 commit ahead of helium:main" banner at the top of
    the `Code` tab in the forked repository.
-   - the number may be more than 1, depending on how many edits ahead the forked repository from the
+   - the number may be more than 1, depending on how many edits ahead the forked repository is from the
      main HIP repository.
 2. Click the grey `Contribute` dropdown.
 3. Click the green "Open pull request" button.
@@ -110,6 +111,7 @@ A Pull Request, or "PR", is the action taken to submit changes to a GitHub repos
   />
   <figcaption>Make a Pull Request to the main repository from a personal fork.</figcaption>
 </figure>
+<br />
 
 All PR's are reviewed by repository maintainers and "merged" into the main repository when any
 issues are resolved and the edits are ready for the general audience.
