copy edits from feedback

--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -89,7 +89,8 @@ You can read more about basic writing and formatting syntax
 
 :::info What is a Pull Request?
 
-A Pull Request, or "PR", is the action taken to submit changes to a GitHub repository.
+A Pull Request, or "PR", is quite literally an ask to the repository maintainers to "pull in"
+proposed changes.
 
 :::
 
@@ -98,9 +99,9 @@ A Pull Request, or "PR", is the action taken to submit changes to a GitHub repos
    - the number may be more than 1, depending on how many edits ahead the forked repository from the
      main HIP repository.
 2. Click the grey `Contribute` dropdown.
-3. Click the green "Open pull request" button.
+3. Click the green `Open pull request` button.
 4. Edit the `Title` and `Description` to inform other readers and maintainers what changes were
-   made.
+   made. Good pull requests are detailed in their explanation of changes.
 5. Click the green `Create pull request` button.
 
 <figure className="screensnippet-wrapper">
@@ -111,8 +112,8 @@ A Pull Request, or "PR", is the action taken to submit changes to a GitHub repos
   <figcaption>Make a Pull Request to the main repository from a personal fork.</figcaption>
 </figure>
 
-All PR's are reviewed by repository maintainers and "merged" into the main repository when any
-issues are resolved and the edits are ready for the general audience.
+All PRs are reviewed by the HIP authors, and once approved are "merged" into the main branch by
+repository maintainers where the edits are visible to the Helium community.
 
 ---
 
