swap gifs for images

--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -37,43 +37,95 @@ to your GitHub account.
 
 :::
 
-1. Log in to an existing account or create a new account on [GitHub](https://github.com).
-2. Open the Helium HIP Repository at [https://github.com/helium/hip](https://github.com/helium/hip)
-3. Click the `Fork` button in the upper right-hand corner.
-4. Leave all settings default and confirm using the green `Create Fork` button at the bottom
-   left-hand corner.
-   - A copy of the Helium HIP repository will be made in the user's GitHub account and should open
-     automatically.
+**Step 1.** Log in to an existing account or create a new account on [GitHub](https://github.com).
+
+**Step 2.** Open the Helium HIP Repository at
+[https://github.com/helium/hip](https://github.com/helium/hip)
+
+**Step 3.** Click the `Fork` button in the upper right-hand corner.
 
 <figure className="screensnippet-wrapper">
   <img
-    src={useBaseUrl('/img/hip/create-fork.gif')}
-    style={{ maxHeight: 400, borderRadius: '40px', padding: '14px 16px 20px' }}
+    src={useBaseUrl('/img/hip/edit-hip-00.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
   />
-  <figcaption>Create a Fork of the Helium HIP repository in GitHub.</figcaption>
+</figure>
+
+**Step 4.** Leave all settings default and confirm using the green `Create Fork` button at the
+bottom left-hand corner.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-01.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+  <figcaption>
+    A copy of the Helium HIP repository will be made in the user's GitHub account and should open
+    automatically.
+  </figcaption>
 </figure>
 
 ---
 
 ## Edit an Existing HIP
 
-1. Begin inside the forked copy at `https://github.com/<githubUsername>/HIP`
-2. Open the HIP to be edited by clicking on the file. This example uses 'HIP 83'.
-3. Click the `Pencil Icon` in the upper right-hand corner to make edits.
-4. Make edits or changes to the HIP.
-5. Click the green `Commit changes...` button in the upper right-hand corner.
-6. In the pop-up window, use all default settings and click the green `Commit changes` button to
-   save the edits.
+**Step 1.** Begin inside the forked copy at `https://github.com/<githubUsername>/HIP`
 
 <figure className="screensnippet-wrapper">
   <img
-    src={useBaseUrl('/img/hip/make-edit-commit.gif')}
-    style={{ maxHeight: 400, borderRadius: '40px', padding: '14px 16px 20px' }}
+    src={useBaseUrl('/img/hip/edit-hip-02.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
   />
-  <figcaption>Make an edit to an existing HIP and commit changes to the Fork.</figcaption>
+  <figcaption>Your username will be visible here.</figcaption>
 </figure>
 
-<br />
+**Step 2.** Open the HIP to be edited by clicking on the file. This example uses 'HIP 83'.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-03.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+  <figcaption>Click on the HIP to edit.</figcaption>
+</figure>
+
+**Step 3.** Click the `Pencil Icon` in the upper right-hand corner to make edits.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-04.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 4.** Make edits or changes to the HIP.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-05.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 5.** Click the green `Commit changes...` button in the upper right-hand corner.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-05b.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 6.** In the pop-up window, use all default settings and click the green `Commit changes`
+button to save the edits.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-06.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
 :::info HIPs are Written in Markdown
 
 All HIPs in the Helium GitHub repository are written in **Markdown** an easy-to-read, easy-to-write
@@ -95,24 +147,66 @@ proposed changes.
 
 :::
 
-1. Committed edits will display a "This branch is 1 commit ahead of helium:main" banner at the top of
-   the `Code` tab in the forked repository.
-   - the number may be more than 1, depending on how many edits ahead the forked repository is from the
-     main HIP repository.
-2. Click the grey `Contribute` dropdown.
-3. Click the green `Open pull request` button.
-4. Edit the `Title` and `Description` to inform other readers and maintainers what changes were
-   made. Good pull requests are detailed in their explanation of changes.
-5. Click the green `Create pull request` button.
+**Step 1.** Committed edits will display a "This branch is 1 commit ahead of helium:main" banner at
+the top of the `Code` tab in the forked repository.
 
 <figure className="screensnippet-wrapper">
   <img
-    src={useBaseUrl('/img/hip/make-pr.gif')}
-    style={{ maxHeight: 400, borderRadius: '40px', padding: '14px 16px 20px' }}
+    src={useBaseUrl('/img/hip/edit-hip-07.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
   />
-  <figcaption>Make a Pull Request to the main repository from a personal fork.</figcaption>
+  <figcaption>
+    The number may be more than 1, depending on how many edits ahead the forked repository is from
+    the main HIP repository.
+  </figcaption>
 </figure>
-<br />
+
+**Step 2.** Click the grey `Contribute` dropdown.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-07b.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 3.** Click the green `Open pull request` button.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-08.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 4.** Edit the `Title` and `Description` to inform other readers and maintainers what changes
+were made.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-09.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+  <figcaption>Good pull requests are detailed in their explanation of changes.</figcaption>
+</figure>
+
+**Step 5.** Click the green `Create pull request` button.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-09b.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
+
+**Step 6.** View the newly created Pull Request in the main Helium HIP repository.
+
+<figure className="screensnippet-wrapper">
+  <img
+    src={useBaseUrl('/img/hip/edit-hip-10.png')}
+    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+  />
+</figure>
 
 All PRs are reviewed by the HIP authors, and once approved are "merged" into the main branch by
 repository maintainers where the edits are visible to the Helium community.
