remove extra admonitions

--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -30,13 +30,6 @@ This page will walk users through the process of:
 
 ## Fork the Repo
 
-:::info What the Fork
-
-Rather than making edits to the main repository, create a personal copy by "forking" the repository
-to your GitHub account.
-
-:::
-
 **Step 1.** Log in to an existing account or create a new account on [GitHub](https://github.com).
 
 **Step 2.** Open the Helium HIP Repository at
@@ -68,6 +61,10 @@ bottom left-hand corner.
 ---
 
 ## Edit an Existing HIP
+
+All HIPs in the Helium GitHub repository are written in Markdown an easy-to-read, easy-to-write
+syntax for formatting plain text. Read more about basic writing and formatting syntax
+[here.](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
 
 **Step 1.** Begin inside the forked copy at `https://github.com/<githubUsername>/HIP`
 
@@ -126,26 +123,12 @@ button to save the edits.
   />
 </figure>
 
-:::info HIPs are Written in Markdown
-
-All HIPs in the Helium GitHub repository are written in **Markdown** an easy-to-read, easy-to-write
-syntax for formatting plain text.
-
-You can read more about basic writing and formatting syntax
-[here.](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
-
-:::
-
 ---
 
 ## Make a Pull Request
 
-:::info What is a Pull Request?
-
 A Pull Request, or "PR", is quite literally an ask to the repository maintainers to "pull in"
 proposed changes.
-
-:::
 
 **Step 1.** Committed edits will display a "This branch is 1 commit ahead of helium:main" banner at
 the top of the `Code` tab in the forked repository.
