--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -207,7 +207,7 @@ repository maintainers where the edits are visible to the Helium community.
 
 ---
 
-## Stay Involved.
+## Stay Involved
 
 Once a PR is submitted, authors are asked to keep a watch on them for comments or change requests.
 By default, the user to submit a PR will be subscribed via email to receive notifications on PR
