title update and image optimizations

--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -1,6 +1,6 @@
 ---
 id: edit-a-hip
-title: Propose Changes to Existing HIP in GitHub
+title: Propose Changes To An Existing HIP
 pagination_label: Edit an Existing HIP
 sidebar_label: Edit an Existing HIP
 description: Helium Documentation
