--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -10,99 +10,112 @@ slug: /Hotspot-makers/become-a-maker/funding-a-maker-account
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Prior to migrating from the Helium blockchain to Solana, Hotspot makers were required to fund their
-maker wallets with enough Data Credits to facilitate two separate transactions: the 4,000,000 DC
-cost of onboarding each Hotspot and the 1,000,000 DC cost of the first location assertion for each
-Hotspot. Onboarding is only paid once, location assertion is paid each time the Hotspot changes
-location
+Before migrating from the Helium blockchain to Solana, Hotspot Makers had to fund Maker wallets with
+enough Data Credits to facilitate two separate transactions: The 4,000,000 DC cost of onboarding
+each Hotspot, and The 1,000,000 DC cost of the first location assertion for each Hotspot. Onboarding
+fees are paid once. Location assertion fees are paid each time the Hotspot location is updated.
 
-This funding of the Data Credits was done by burning HNT from the makers wallet to DC in the makers
-wallet using a CLI tool which is no longer supported. Transaction costs were charged in DC and paid
-for by DC or autoburning HNT to DC in the wallet.
+This funding of the Data Credits was done by burning HNT from the Makers wallet to Data Credits in
+the Makers wallet using a CLI tool which is no longer supported. Transaction costs were charged in
+DC and paid for by DC or implicitly burning HNT to DC in the Makers' wallets.
 
-## Funding the Maker account on the Solana blockchain
+---
 
-With the migration of the Helium blockchain to the Solana blockchain, funding the wallet with Data
-Credits from HNT tokens is now completed by using the Helium Wallet App directly. New to Solana, the
-transaction costs for onboarding and location assertion are paid in SOL to the Solana Blockchain.
-Maker wallets must now maintain token balances of both Data Credits and SOL to be able to onboard
-and location assert the Hotspots that the maker is supplying to customers.
+## Funding Maker Account on Solana
 
-### Onboarding Hotspots - Data Credit fees
+Funding a Maker wallet with Data Credits from HNT tokens is now performed in the Helium Wallet App.
+The transaction costs for onboarding and location assertion are paid in SOL to the Solana
+Blockchain. Maker wallets must now maintain token balances of both Data Credits and SOL for
+onboarding and location assertion fees which the Maker supplies to customers.
 
-Onboarding the Hotspot = 4,000,000 DC Location assert the Hotspot = 1,000,000 DC - currently 500,000
-due to HIP 69
+### Data Credit Fees
 
-### Onboarding Hotspots - SOL token fees
+- Onboarding = 4,000,000 DC
+- Location Assertion = 1,000,000 DC<sup>(</sup>[^1]<sup>)</sup>
 
-Create the Hotspot NFT on the blockchain = 0.00001 SOL Onboard only or Onboard and Location assert
-the Hotspot = 0.00175696 SOL Location assert only the Hotspot = 0.00001 SOL
+[^1]:
+    Currently 500,000 due to
+    [HIP 69](https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md).
 
-### Funding the wallet with SOL
+### SOL Fees
 
-Funding the wallet with SOL is performed the same way as sending crypto currency tokens to any
-crypto wallet. Send from an exchange, another wallet or swap from another cryptocurrency within the
-Helium Wallet using the inbuilt browser and a swap aggregator such as https://jup.ag/swap
+- Create the Hotspot NFT on the blockchain = 0.00001 SOL
+- Onboard only or Onboard and Location Assertion = 0.00175696
+- SOL Location Assertion only = 0.00001 SOL
 
-### Funding the wallet with Data Credits
+---
 
-Funding a wallet with Data Credits requires HNT and only HNT can be used to obtain data credits. The
+## Funding Maker Wallets with SOL
+
+Funding a Maker wallet with SOL is performed the same way as sending tokens to any crypto wallet.
+Send from an exchange, another wallet, or swap from another cryptocurrency within the Helium Wallet
+using the inbuilt browser and a swap aggregator such as [Jupiter](https://jup.ag/swap).
+
+---
+
+## Funding Maker Wallets with Data Credits
+
+Funding a wallet with Data Credits requires HNT, as Data Credits can only be obtained using HNT. The
 exchange rate for DC is $1 worth of HNT = 100,000 DC.
 
 - If HNT is $2 then 0.5 HNT = 100,000 DC
 - If HNT is $10 then 0.1 HNT = 100,000 DC
 
-It is the USD/HNT exchange rate within the Helium Wallet App that is used for the conversion. This
-is shown before committing the transaction.
+The USD/HNT exchange rate within the Helium Wallet App is used for the conversion and appears in the
+Helium Wallet app before committing the transaction.
+
+:::warning HNT to DC swaps are irreversible
+
+Data Credits cannot be refunded, exchanged for other tokens, or transferred between wallets.
+
+:::
+
+### Method 1: Use the Helium Wallet app
+
+Makers can use the Helium Wallet app to swap HNT directly to DC.
+
+This method requires that the Maker Wallet is already funded with HNT to swap and SOL for
+transaction fees.
+
+Swap HNT to DC within a Maker Wallet:
+
+1. Select the Maker Wallet in the Helium Wallet app.
+1. Tap the `$` icon on the bottom tab bar.
+1. Tap the `Swap` icon in the middle of the screen.
+1. Select `HNT` in the top drop-down and enter an amount of HNT to swap.
+1. The lower drop-down will be filled with the resulting DC amount.
+1. Tap the `Swap Tokens` button and confirm the swap transaction.
+1. HNT is burned for DC within the same Wallet.
+
+The new DC balance amount can be verified in the app tokens list on the `$` tab within the Helium
+Wallet app.
 
 ---
 
-## Method 1 : Using the wallet app to swap HNT to DC within the Maker Wallet
+### Method 2 : Use the Helium Wallet app to Fund a Different Wallet
 
-This requires HNT held within the maker wallet and access to the maker wallet. For migrating a
-Helium based wallet to Solana, please use this widget.
+Any Wallet owner can send DC to a Maker wallet using the Helium Wallet app to swap HNT directly to
+DC.
 
-- Using the Helium Wallet app with the makers' Wallet selected.
-- Click the $ Icon and if shown,slide the token list down until the Deposit, Swap and Send buttons
-  are shown.
-- Take note of the total HNT in the wallet.
-- Click the Swap icon. Accept any warning.
-- Select first token as HNT and second token as DC
-- Enter a value in the “You Pay x HNT” entry, that is the same as, less than or the “max” of the HNT
-  in the wallet.
-- Check the You Receive amount is showing a value appropriate for the exchange rate in the app and
-  press the Swap Tokens button.
-- Confirm this is irreversible
-- HNT is burned for DC within the same wallet.
-- The new DC balance amount can be verified in the app tokens list.
+This method requires that the sending Wallet is already funded with HNT to swap and SOL for
+transaction fees.
 
----
+Add the Maker Wallet address to the Address Book:
 
-## Method 2 : Using the wallet app to swap HNT to DC and send it to the Maker wallet from any other wallet
+1. Tap the `Address Book` icon in the top right corner of the Helium Wallet app.
+1. Add new contact with the Maker's Solana wallet address.
 
-This method requires HNT held within any wallet and the maker's Solana wallet address. For migrating
-a Helium based wallet to Solana, please use this widget.
+Swap HNT to DC to a Maker Wallet:
 
-- Using the Helium Wallet app click the Address Book icon in the top right corner.
-- Add new contact with the maker's Solana wallet address.
-- Click the $ Icon and if shown, slide the token list down until the Deposit, Swap and Send buttons
-  are shown.
-- Take note of the total HNT in the wallet.
-- Click the Swap icon. Accept any warning.
-- Select first token as HNT and second token as DC
-- Enter a value in the “You Pay x HNT” entry, that is the amount of HNT in the wallet you want to
-  exchange for DC.
-- Click the "Add Recipient +"
-- Click the "..." to the right of Solana Address and select the Contact you created
-- Check the You Receive amount is showing a value appropriate for the exchange rate in the app and
-  press the Swap Tokens button.
-- Confirm this is irreversible
-- HNT is burned for DC and the DC deposited in the recipients wallet
-- The new DC balance amount in the recipients wallet can be verified by looking at the Helium Data
-  Credit token balance of the maker wallet on https://explorer.solana.com/
+1. Select any Wallet in the Helium Wallet app.
+1. Tap the `$` icon on the bottom tab bar.
+1. Tap the `Swap` icon in the middle of the screen.
+1. Select `HNT` in the top drop-down and enter an amount of HNT to swap.
+1. The lower drop-down will be filled with the resulting DC amount.
+1. Tap the grey `Add Recipient +` text to enter the receiving Solana wallet address.
+1. Tap the `...` to the right of Solana Address and select the contact for the Maker Wallet.
+1. Tap the `Swap Tokens` button and confirm the swap transaction.
+1. HNT is burned for DC within the same Wallet.
 
----
-
-## Warning
-
-Data Credits cannot be refunded, exchanged for other tokens or transferred between wallets.
+The new DC balance amount in the recipient Maker Wallet can be verified by looking at the Helium
+Data Credit token balance of the maker wallet on https://explorer.solana.com/
